k8s/bases/apps/fleetdm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fleetdm
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
