k8s/bases/apps/fleetdm/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fleetdm
  namespace: fleetdm
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: FleetDM
    gethomepage.dev/description: Open-source device management (MDM + osquery).
    gethomepage.dev/group: Device Management
    gethomepage.dev/icon: si-coderwall-#40B5A4
    gethomepage.dev/href: https://fleetdm.${domain}
    gethomepage.dev/pod-selector: app=fleet
spec:
  parentRefs:
    - name: platform
      namespace: kube-system
      sectionName: https
  hostnames:
    - fleetdm.${domain}
  rules:
    - backendRefs:
        - name: fleetdm-service
          port: 8080
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            set:
              - name: Strict-Transport-Security
                value: max-age=63072000; includeSubDomains; preload
